# Forge

./: .gitignore  CODE_REVIEW.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  index.html  metadata.html  package-lock.json  package.json  pdf-viewer.html  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  metadata.tsx  pdf-viewer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: image.rs  mod.rs  pdf.rs  text.rs  video.rs  window.rs
src-tauri/src/utils/: command_executor.rs  compression.rs  file_metadata.rs  mod.rs  path_utils.rs  window_utils.rs
src/components/: ImageProcessor.tsx  MetadataWindow.tsx  PdfProcessor.tsx  PdfViewerWindow.tsx  TextProcessor.tsx  VideoProcessor.tsx
src/components/image/: ImageAITools.tsx  ImageCompressTools.tsx  ImageConvertTools.tsx  ImagePreview.tsx  ImageTransformTools.tsx
src/components/merge/: DraggablePageList.tsx  DraggablePdfList.tsx  MergePdfView.tsx  PageCard.tsx  PdfCard.tsx  types.ts
src/components/pdf/: PdfNavigation.tsx  PdfToolbar.tsx  PdfTools.tsx  PdfViewer.tsx  SignatureModal.tsx
src/components/shared/: ActionButton.tsx  CollapsibleSection.tsx  CompressionSlider.tsx  FileSizeComparison.tsx  Header.tsx  MetadataDetailModal.tsx  MetadataSection.tsx  ProcessorLayout.tsx  (+2 more)
src/constants/: processor.ts
src/hooks/: useFileSave.ts  useImageTransform.ts  useMetadata.ts  useProcessing.ts  useToast.ts  useWindowResize.ts
src/types/: processor.ts
src/utils/: fileLoaders.ts  fileType.ts  fileUtils.ts  pathUtils.ts  pdfUtils.ts  processorRegistry.ts
(+2 files in other folders)
