[package]
name = "forge"
version = "0.1.0"
description = "Minimal Media Utility - Local, private media processing"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "macos-private-api", "shell-open", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# Image processing
image = "0.25"
photon-rs = "0.3.2"
imageproc = "0.25"

# PDF processing
lopdf = "0.32"
pdf-extract = "0.7"

# Video/Audio processing
ffmpeg-next = "7.0"

# Text processing
convert_case = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Utilities
anyhow = "1.0"
base64 = "0.22"
ndarray = { version = "0.16", features = ["std"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
